# WaveNet

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
dataset/: ljspeech.py
models/: causal_conv_1d.py  residual_block.py  wavenet.py
scripts/: inference.py  train.py
